# skia-android

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/kejin/android/skia/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/kejin/android/skia/demo/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/kejin/android/skia/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
libskia/: build.gradle.kts
libskia/src/main/cpp/: CMakeLists.txt  skia.cpp  skia_bmp_canvas.cpp  skia_canvas.cpp  skia_font.cpp  skia_paint.cpp  skia_path.cpp
libskia/src/main/java/com/bhs/android/skia/: SkBlendMode.kt  SkBmpCanvas.kt  SkCanvas.kt  SkFont.kt  SkPaint.kt  SkPath.kt  Skia.kt
libskia/src/main/java/com/kejin/android/skia/: Skia.kt
